# BM2Q

./: .gitignore  README.md  main.py  pyproject.toml
data/: answers.json  congrats.json  questions.json  questions2.json
front/: client.py
player/: entities.py
server/: api.py  entities.py  server.py
