[tool.poetry]
name = "bm2q"
version = "0.1.0"
description = ""
authors = [
    "tristanqtn <tristan.querton@gmail.com>",
    "Pierre-Benoît Querton <github@querton.com>¨",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
fastapi = {extras = ["standard"], version = "^0.114.2"}
websocket = "^0.2.1"
uvicorn = "^0.30.6"
streamlit = "^1.38.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
